commit  correcao atribuiçãoes