@@ -1,5 +1,8 @@
 package com.valdecir.valdecir_teste.convert;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
 import org.springframework.stereotype.Component;
 import com.valdecir.valdecir_teste.DTO.AtribuicaoDTO;
 import com.valdecir.valdecir_teste.DTO.CartorioDTO;
@@ -8,7 +11,6 @@ import com.valdecir.valdecir_teste.model.Cartorio;
 
 @Component
 public class CartorioConvert {
-	
 
 	public CartorioDTO toDTO(Cartorio cartorio) {
 
@@ -17,7 +19,13 @@ public class CartorioConvert {
 		dto.setNome(cartorio.getNome());
 		dto.setObservacao(cartorio.getObservacao());
 		dto.setSituacao(cartorio.getSituacao());
-		dto.setAtribuicoes(cartorio.getAtribuicoes().stream().map(this::toDTO).toList());
+
+		if (cartorio.getAtribuicoes() != null) {
+			List<AtribuicaoDTO> atribuicoes = cartorio.getAtribuicoes().stream().map(this::toDTO)
+					.collect(Collectors.toList());
+			dto.setAtribuicoes(atribuicoes);
+		}
+
 		return dto;
 	}
 
@@ -27,24 +35,30 @@ public class CartorioConvert {
 		cartorio.setNome(dto.getNome());
 		cartorio.setObservacao(dto.getObservacao());
 		cartorio.setSituacao(dto.getSituacao());
-		 cartorio.setAtribuicoes(dto.getAtribuicoes().stream().map(this::toEntity).toList());
+
+		if (dto.getAtribuicoes() != null) {
+			List<Atribuicao> atribuicoes = dto.getAtribuicoes().stream().map(this::toEntity)
+					.collect(Collectors.toList());
+			cartorio.setAtribuicoes(atribuicoes);
+		}
+
 		return cartorio;
 	}
-	
-	public AtribuicaoDTO toDTO(Atribuicao atribuicao) {
-        AtribuicaoDTO dto = new AtribuicaoDTO();
-        dto.setId(atribuicao.getId());
-        dto.setNome(atribuicao.getNome());
-        dto.setSituacao(atribuicao.getSituacao());
-        return dto;
-    }
 
-    public Atribuicao toEntity(AtribuicaoDTO dto) {
-        Atribuicao atribuicao = new Atribuicao();
-        atribuicao.setId(dto.getId());
-        atribuicao.setNome(dto.getNome());
-        atribuicao.setSituacao(dto.getSituacao());
-        return atribuicao;
-    }
+	public AtribuicaoDTO toDTO(Atribuicao atribuicao) {
+		AtribuicaoDTO dto = new AtribuicaoDTO();
+		dto.setId(atribuicao.getId());
+		dto.setNome(atribuicao.getNome());
+		dto.setSituacao(atribuicao.getSituacao());
+		return dto;
+	}
+
+	public Atribuicao toEntity(AtribuicaoDTO dto) {
+		Atribuicao atribuicao = new Atribuicao();
+		atribuicao.setId(dto.getId());
+		atribuicao.setNome(dto.getNome());
+		atribuicao.setSituacao(dto.getSituacao());
+		return atribuicao;
+	}
 
 }
